# calamum

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.calamum/: project.json
catalog/: test_definitions.json
jobs/JOB_0001_CALAMUM_IMPLEMENTATION_TOOLS-GATE-LIFECYCLE_20260502/: CALAMUM_HELP_SURFACE_REPACKAGING_INVESTIGATION_AND_REMEDIATION_20260502.md  CALAMUM_JOB_PIPELINE_SSOT_AUDIT_SCRATCHPAD_20260502.md  CALAMUM_MONITOR_EVIDENCE_ARCHITECTURE_PROPOSAL_20260501.md  CALAMUM_MONITOR_EVIDENCE_ARCHITECTURE_SCRATCHPAD_20260501.md  JOB.json  JOB.md  JOB.md.resolution_trace.json  MANIFEST.json  MANIFEST.json.sha256  MANIFEST.json.sig  QF.md  QS.json
src/calamum/: __init__.py  api.py  catalog.py  cli.py  layout.py  projects.py  render.py  reports.py  runner.py  signing.py
tests/: test_api.py  test_catalog.py  test_cli.py  test_projects.py  test_reports.py  test_runner.py  test_signing.py
tools/: release_version_audit.py
