[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calamum-test"
dynamic = ["version"]
description = "Project-aware consolidated testing CLI for pytest, sandbox, empirical, and retained aggregate validation lanes."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "ORACL-Prime" }
]
license = "MIT"
keywords = ["testing", "cli", "qa", "retained-evidence", "project-aware"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "cryptography>=42.0.0"
]

[project.urls]
Homepage = "https://github.com/joediggidyyy/calamum"
Repository = "https://github.com/joediggidyyy/calamum"
Issues = "https://github.com/joediggidyyy/calamum/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.0",
  "twine>=5.1.0"
]

[project.scripts]
calamum = "calamum.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "calamum.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
